--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,21 +9,20 @@ springdoc.version=1.0.0
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.operationsSorter=alpha
 
-# H2 in-memory DB for local run
-spring.datasource.url=jdbc:h2:mem:bankdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nihadqocayev152@gmail.com
+spring.mail.password=tyjz ifmi wmqn vdwz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# JWT secret key
+security.jwt.secret-key =${JWT_SECRET_KEY}
+security.jwt.expiration-time=3600000
+#
 # Thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-
-# JWT defaults for local run (base64-encoded 32+ bytes)
-jwt.expirationInMinutes=60
-jwt.secret=c2VjcmV0LXNlY3JldC1zZWNyZXQtc2VjcmV0LXNlY3JldC1zZWNyZXQ=
