--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,19 +10,25 @@ springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.operationsSorter=alpha
 
 
-
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=nihadqocayev152@gmail.com
-spring.mail.password=tyjz ifmi wmqn vdwz
+spring.mail.username=nihadgojayev152@gmail.com
+spring.mail.password=gyzo rojy tsaw eshl
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# JWT secret key
-security.jwt.secret-key =${JWT_SECRET_KEY}
+security.jwt.secret-key=${JWT_SECRET_KEY:}
 security.jwt.expiration-time=3600000
 #
 # Thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+# JWT properties used by JwtProperties
+jwt.expirationInMinutes=60
+jwt.secret=${JWT_SECRET_KEY:test-secret}
+
+
+
