--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=BankingProjectFinal
 
+spring.datasource.username=sa
+spring.datasource.password=password123 #
+
+
 # Swagger (springdoc)
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
