--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=BankingProjectFinal
-
+# H2 database (in-memory)
+spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=sa
-spring.datasource.password=password123 #
+spring.datasource.password=password123
+spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 # Swagger (springdoc)
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
